--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body:not(.firstload) .pace{display: none!important}
 body.d1 #float-dog{ background-image: url(../img/d1.png);}
 body.d2 #float-dog{ background-image: url(../img/d2.png);}
 body.d3 #float-dog{ background-image: url(../img/d3.png);}
-
+body.anim{pointer-events: none}
 #scroll-obj1{-webkit-transition:1.2s cubic-bezier(.08,.82,.17,1);-o-transition:1.2s cubic-bezier(.08,.82,.17,1);transition:1.2s cubic-bezier(.08,.82,.17,1);  }
 
 .img-wrap img{width: 100%}
@@ -169,7 +169,7 @@ body>.soc-btns{position: fixed;bottom: 15px;width: 100%;display: -webkit-box;dis
 #section-3 >.container{position: relative;transition: transform 0.7s;}
 #dogs:after{content:"";-webkit-transition: all ease-in-out 1.2s;-o-transition: all ease-in-out 1.2s;transition: all ease-in-out 1.2s;position:absolute;width: 100%;height: 100%;background-color: rgba(0, 0, 0, 0);left: 0;top: 0;z-index: 4;pointer-events: none;}
 
-.progress-circle{width: 92px;height: 92px; position: fixed; right: 11px;bottom: 11px;z-index: 3;opacity: 0;pointer-events: none;-webkit-transition: opacity 1.2s;-o-transition: opacity 1.2s;transition: opacity 1.2s;}
+.progress-circle{width: 92px;height: 92px; position: fixed; left: 11px;bottom: 11px;z-index: 3;opacity: 0;pointer-events: none;-webkit-transition: opacity 1.2s;-o-transition: opacity 1.2s;transition: opacity 1.2s;}
 .progress-circle .bar{stroke-dashoffset: 145.5;stroke-dasharray: 145.5;}
 
 .fade-up{opacity: 0;-webkit-transition: 1.2s cubic-bezier(0,.2,0,.98);-o-transition: 1.2s cubic-bezier(0,.2,0,.98);transition: 1.2s cubic-bezier(0,.2,0,.98); -webkit-transform: translate3d(0,8vh,0); transform: translate3d(0,8vh,0);visibility: hidden;}
@@ -186,14 +186,17 @@ body.inner .progress-circle:hover .arr{fill-opacity: 1 !important;}
 body.inner .header{-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);opacity: 1;z-index: 5;}
 body.inner #menu{opacity: 1;pointer-events: initial;cursor: pointer;/*! overflow: hidden; */}
 body.inner #dogs:after{background-color: rgba(0, 0, 0, 1);}
+
+body.inner .dog-item-outher .img-main img,
+body.to-main .dog-item-outher .img-main img{transition: .3s; transform:scale(1) translate3d(0px, 0px, 0px)!important }
 body.scrolltop .scroll-content{-webkit-transform: translate3d(0px, 0px, 0px) !important;transform: translate3d(0px, 0px, 0px) !important;-webkit-transition: .3s;-o-transition: .3s;transition: .3s;}
 body.animation .scroll-content{-webkit-transform: translate3d(0px, 0px, 0px) !important;transform: translate3d(0px, 0px, 0px) !important;}
+body.show-h2-new .h2-svg{visibility: hidden}
 
 body.animation .h2-wrap svg{-webkit-transform: translate3d(0,-150px,0);transform: translate3d(0,-150px,0); opacity: 0}
 body.noanim #wrap{-webkit-transition: none!important;-o-transition: none!important;transition: none!important;}
 body.to-main .dog-item-inner{opacity: 0 !important;transform: translate3d(0,250px,0) scale(1,1) !important;transition: .4s cubic-bezier(0,.5,.58,1) !important;}
-
-
+ 
 body[data-slide="1"]>.soc-btns{opacity: 1;pointer-events: initial;-webkit-transition: 0.5s;-o-transition: 0.5s;transition: 0.5s;-webkit-transition-delay: 0.7s;-o-transition-delay: 0.7s;transition-delay: 0.7s;}
 body[data-slide="2"] #float-dog{-webkit-transform: translate3d(-35vw,0,0);transform: translate3d(-35vw,0,0);-webkit-transition: 1.8s;-o-transition: 1.8s;transition: 1.8s;}
 body[data-slide="1"] #wrap {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
@@ -230,7 +233,7 @@ body[data-slide="7"] #dogs{-webkit-transform: translate3d(0,calc((((45vw / 1.714
 body[data-slide="1"] .header{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);opacity: 1;-webkit-transition-delay: 1s;-o-transition-delay: 1s;transition-delay: 1s;}
 
 .dog-item.active[data-id="1"]{margin-top: 0}
-.dog-item.active[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) - 40px);}
+.dog-item.active[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) - 40px)}
 .dog-item.active[data-id="3"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + (((100vh - (45vw / 1.714285)) / 2) - 80px)); }
 .dog-item.active[data-id="4"]{margin-top: calc((((100vh - (45vw / 1.714285)) / 2) * 2) + ((45vw / 1.714285) * 3) + (((100vh - (45vw / 1.714285)) / 2) - 120px));}
 .dog-item.active[data-id="5"]{margin-top: calc((((100vh - (45vw / 1.714285)) / 2) * 3) + ((45vw / 1.714285) * 4) + (((100vh - (45vw / 1.714285)) / 2) - 160px));}
@@ -274,16 +277,17 @@ body[data-slide="6"] .infogr1-left{display: block}
 
  
 
-.dog-item.active{overflow-x:hidden;height: 100vh;z-index: 5 !important;-webkit-overflow-scrolling: touch;/*! -webkit-transform: translateZ(0px); *//*! -webkit-transform: translate3d(0,0,0); *//*! -webkit-perspective: 1000; *//*! scroll-behavior: smooth; */overflow: hidden;}
+.dog-item.active{overflow-x:hidden;height: 100vh;z-index: 5 !important;-webkit-overflow-scrolling: touch;overflow: hidden;}
 .dog-item.active .img-main{-webkit-transform: scale(1) translate3d(0,0,0);transform: scale(1) translate3d(0,0,0);}
 .dog-item.active .img-main:after{opacity: 1; }
 .dog-item.active .img-main img{cursor: default}
 .dog-item.active .header {-webkit-transform: translate3d(0,0,0) scale(1,1);transform: translate3d(0,0,0) scale(1,1); opacity: 1;}
 .dog-item.active .dog-item-inner{-webkit-transform: translate3d(0,0,0) scale(1,1);transform: translate3d(0,0,0) scale(1,1);opacity: 1;visibility: visible;}
+.dog-item.active .dog-item-outher .h2-wrap{visibility: hidden;}
 .dog-item.active[data-id="1"] .img-main{-webkit-transform: scale(0.838) translate3d(0,109px,0);transform: scale(0.838) translate3d(0,109px,0);}
 .dog-item.active[data-id="4"] .img-main{-webkit-transform: scale(0.45) translate3d(-20%,0%,0);transform: scale(0.45) translate3d(-20%,0%,0);padding-bottom: 24%;opacity: 0;}
 .dog-item.active[data-id="5"] .img-main{padding-bottom: 67%;}
-.dog-item.active[data-id="5"] .img-main::after{}
+
 
 .dog-item{-webkit-transition: all ease-in-out 1s;-o-transition: all ease-in-out 1s;transition: all ease-in-out 1s;height: calc(100vw / 1.714285); position: absolute;top: 0;left: 0;width: 100%;height: calc(45vw / 1.714285);overflow: hidden;}
 .dog-item .h2-wrap-new{ text-shadow: none; text-transform: uppercase;   position: absolute;left: calc(50vw - 295px);z-index: 3;-webkit-transition: .7s cubic-bezier(0,.5,.58,1);-o-transition: .7s cubic-bezier(0,.5,.58,1);transition: .7s cubic-bezier(0,.5,.58,1);opacity: 0;font-size: 5.662vw;line-height: 4.412vw;max-width: 52.382vw;bottom: 6.324vw;-webkit-transform: translate(0,17.279vw);-ms-transform: translate(0,17.279vw);transform: translate3d(0,17.279vw,0);}
@@ -291,15 +295,19 @@ body[data-slide="6"] .infogr1-left{display: block}
 .dog-item[data-scrollbar]{position: absolute}
 
 .dog-item .img-main:after{content:""; opacity: 0; background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,1))); background: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,1)); background: linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,1));position: absolute;-webkit-transition: opacity 1s;-o-transition: opacity 1s;transition: opacity 1s;width: 100%;height: calc(44% + 10px);left: 0;bottom: -10px;pointer-events: none;}
-
+body.to-inner .dog-item[data-id="1"] .dog-item-outher:after{height: 5px;background: linear-gradient(0deg, rgba(0,0,0,0), rgba(0,0,0,1));top: calc(48.7713486vw + 90px);bottom: initial;}
 body.to-inner .dog-item.active .dog-item-outher:after{content:""; position: absolute;width: 100%;bottom: -2px;height: 3px;background-color: #000;}
 body.show-h2-new .dog-item.active .dog-item-outher::after
 body.main .dog-item.active .dog-item-outher::after{contain: initial}
+body.show-h2-new .dog-item.active .h2-wrap-new,
+body.show-h2-new .dog-item.active .fade-up-first{opacity: 1;-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+body.main .h2-wrap h2{display: none;}
+body.main .h2-wrap svg{opacity: 1; -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0);}
+
 .dog-item .dog-item-outher:after{opacity: 0;transition: opacity .2s;transition-delay: 2s;}
 .dog-item.active .dog-item-outher:after{opacity: 1;}
 
-body.show-h2-new .dog-item.active .h2-wrap-new,
-body.show-h2-new .dog-item.active .fade-up-first{opacity: 1;-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+
 .fade-up-first{transition: .7s cubic-bezier(0,.5,.58,1);opacity: 0;transform: translate3d(0,17.279vw,0);}
 .dog-item:after{content:""; width: 100%; height: 100%;top: 0; left: 0; position: absolute; background-color: rgba(0,0,0,1);-webkit-transform: scale(0);-ms-transform: scale(0);transform: scale(0);-webkit-transition: opacity .4s;-o-transition: opacity .4s;transition: opacity .4s;opacity: 0;}
 .dog-item.shadow:after{opacity:1; -webkit-transform:scale(1); -ms-transform:scale(1); transform:scale(1)}
@@ -317,7 +325,7 @@ body.show-h2-new .dog-item.active .fade-up-first{opacity: 1;-webkit-transform: t
 
 
 
-.dog-item[data-id="1"] .dog-item-outher:after{height: 3vw;background: linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,1));}
+
 .dog-item[data-id="4"] h4{max-width: 100%;font-size: 35px;text-align: center;text-transform: uppercase;letter-spacing: 0.035em;margin-bottom: 140px;font-family: 'DrukTextWideCyr-Medium','Arial';}
 .dog-item[data-id="4"] .h2-wrap-new h2{font-size: 3.3vw;text-align: center;letter-spacing: 0.05em;line-height: 1.1em;width: 100vw;}
 .dog-item[data-id="4"] .h2-wrap-new{bottom: 5vw;left: 0;width: 100vw;max-width: 100vw;}
@@ -328,8 +336,6 @@ body.show-h2-new .dog-item.active .fade-up-first{opacity: 1;-webkit-transform: t
 
 
 
-body.main .h2-wrap h2{display: none;}
-body.main .h2-wrap svg{opacity: 1; -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0);}
 
 .no-transitions,
 .no-transitions .img-main,
@@ -337,7 +343,10 @@ body.main .h2-wrap svg{opacity: 1; -webkit-transform: translate3d(0,0,0); transf
 .dog-item-outher {position: relative;}
 .dog-item-outher .header{-webkit-transform: translate3d(0,-100%,0) scale(1,0);transform: translate3d(0,-100%,0) scale(1,0);opacity: 0;-webkit-transition: all ease-in-out 1s;-o-transition: all ease-in-out 1s;transition: all ease-in-out 1s;position: absolute;top: 0;}
 .dog-item-outher .img-main{width: 100%; -webkit-transform: scale(0.45) translate3d(-20%,0%,0); transform: scale(0.45) translate3d(-20%,0%,0);-webkit-transform-origin: 50% 0%;-ms-transform-origin: 50% 0%;transform-origin: 50% 0%;-webkit-transition: all ease-in-out 1s;-o-transition: all ease-in-out 1s;transition: all ease-in-out 1s;max-width: 2560px;position: relative;height: 0;overflow: hidden;padding-bottom: 58.2%;}
-.dog-item-outher .img-main img{width: 100%;cursor: pointer;}
+.dog-item-outher .img-main img,
+.dog-item-outher .img-main svg{width: 100%;cursor: pointer;transform: scale(1.1);}
+
+
 .dog-item-outher h2{color: #ffffff; font-size: 2.868vw; line-height: 1.03em;  text-transform: uppercase;letter-spacing: 0.02em;cursor: pointer;-webkit-transition: all ease-in-out 0.5s;-o-transition: all ease-in-out 0.5s;transition: all ease-in-out 0.5s;font-family: 'DrukTextWideCyr-Heavy','Arial';}
 .dog-item-outher .h2-wrap {overflow: hidden;position: absolute;z-index: 2;top: 15%;left: 50%;width: 35%;cursor: pointer;}
 
@@ -771,6 +780,7 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     .slider-black-item .img-wrap{width:37.5%;} 
     .slider-black-item h5{font-size: 50px;letter-spacing: 0em;margin-bottom: 16px;}
     .dog-item .h2-wrap-new {left: calc(50vw - 416px);}
+    body.to-inner .dog-item[data-id="1"] .dog-item-outher::after {top: calc(48.7713486vw + 124px);}
     .dog-item.active[data-id="1"] .img-main {-webkit-transform: scale(0.838) translate(0px, 152px);-ms-transform: scale(0.838) translate(0px, 152px);transform: scale(0.838) translate(0px, 152px);}
     .dog-item[data-id="4"] h4{font-size: 56px;letter-spacing: 0.043em;}
     .dog-item[data-id="4"] .title-next svg{height: 330px;margin-top: 0;}
@@ -827,12 +837,15 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     #section-1 > div{margin-top: -21vh;}
     #section-2 p { width: 575px;font-size: 18px;line-height: 23.77389px;letter-spacing: 0.522px;}
 
-
+    .h2-svg circle, .h2-svg g:first-of-type{display: none}
+    .h2-svg g{stroke-width:0!important;}
+    
     .dog-item .h2-wrap-new h2{font-size: 4vw;line-height: 1.1em;}
     .dog-item .h2-wrap-new{left: calc(50vw - 275px);bottom: 5.85vw;}
     .dog-item-outher .h2-wrap{width: 48%;left: 51%;top: 22%;}
     
     .dog-item-outher .img-main {-webkit-transform: scale(0.63) translate(-13%,0%);-ms-transform: scale(0.63) translate(-13%,0%);transform: scale(0.63) translate(-13%,0%);}
+    body.to-inner .dog-item[data-id="1"] .dog-item-outher::after {top: calc(45.9777vw + 77px);}
     body[data-slide="4"] #dogs{-webkit-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -1) + 40px));-ms-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -1) + 40px));transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -1) + 40px));}
     body[data-slide="5"] #dogs{-webkit-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -2) + 80px));-ms-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -2) + 80px));transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -2) + 80px));}
     body[data-slide="6"] #dogs{-webkit-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -3) + 120px));-ms-transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -3) + 120px));transform: translateY(calc((((63vw / 1.714285) + ((100vh - (63vw / 1.714285)) / 2)) * -3) + 120px));}
@@ -961,7 +974,7 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     #section-1 > div{margin-top: -27vh;}
     .dog-item-outher{height: 77vw;}
     .dog-item .h2-wrap-new h2{font-size: 5vw;line-height: 1.2em;letter-spacing: 0.1em;}
-    .dog-item .h2-wrap-new{left: calc(50vw - 232px);bottom: 5vw;max-width: 64vw;}
+    .dog-item .h2-wrap-new{left: calc(50vw - 232px);bottom: 5vw;max-width: 66vw;}
 
     .dog-item.active[data-id="1"] .img-main {-webkit-transform: scale(0.9) translate(0px, 119px);-ms-transform: scale(0.9) translate(0px, 119px);transform: scale(0.9) translate(0px, 119px);}
     .dog-item[data-id="4"] .h2-wrap-new h2 {font-size: 5.3vw;}
@@ -984,11 +997,14 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     .slider-black-item{min-height: 375px;padding: 0% 9% 0% 3%;}
     .slider-black-item .text-wrap{width: 43%;}
     .slider-black-item .img-wrap{padding: 0 0 0 4%;width:49%;} 
+    body.to-inner .dog-item.active .dog-item-outher::after {top: calc(58.1997vw - 2px);}
     
     .infogr1-left {padding-right: 4px;max-width: 50%;}
     .infogr1-left > svg {right: 152px;top: 4px;}
     .infogr1-right {width: 50%;max-width: 50%;padding-left: 8.3%; margin-top: 73px;}
-    
+    body.to-inner .dog-item[data-id="1"] .dog-item-outher::after {top: calc(52.37973vw + 105px);}
+    body.to-inner .dog-item[data-id="5"] .dog-item-outher::after {top: calc(67vw - 2px);}
+   
     #infogr2{-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column}
     .infogr2-left{width: 100%}
     .infogr2-right{width: 100%;padding: 0;max-width: 59%;margin: 40px auto 0 auto;}
@@ -1072,8 +1088,13 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     .dog-item-inner{padding-bottom: 100px;}
     .dog-item .h2-wrap-new h2 {line-height: 1.1em;font-family: 'DrukTextCyr-Bold','Arial';letter-spacing: 0.045em;font-size: 5.938vw;}
 	.dog-item .h2-wrap-new {bottom: 28.4vw;max-width: 77vw;left: 9.375vw;}
-
+    body.to-inner .dog-item.active .dog-item-outher::after {top: calc(64vw - 2px);}
+    body.to-inner .dog-item[data-id="5"] .dog-item-outher::after { top: calc(67vw - 2px);}
+    body.to-inner .dog-item[data-id="1"] .dog-item-outher::after { top: 80.516733vw;}
+    body.to-inner .dog-item[data-id="2"] .dog-item-outher::after { top: calc(87.719vw - 2px);}
+    
     .dog-item[data-id="5"] .h2-wrap {width: 83%;left: 5%;}
+
     .dog-item-outher .h2-wrap {width: 80%;left: 15%;top: 69%;}
     .dog-item[data-id="1"] .dog-item-outher .h2-wrap{top: 69%;}
     .dog-item[data-id="2"] .dog-item-outher .h2-wrap{top: 69%;}
@@ -1190,7 +1211,6 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     
     
     body[data-slide="2"] #float-dog {-webkit-transform: translate(-80vw,0);-ms-transform: translate(-80vw,0);transform: translate(-80vw,0);transition: 0.9s;}
-    body.show-h2-new .dog-item.active[data-id="1"] .dog-item-outher::after{bottom: 24vw;height: 10px;background: linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,1));}
     body.inner #section-3 > .container{transform: translate3d(0,0,0)!important}
     .dog-item-outher .img-main {transform: scale(1.65) translate(-1.5%,0%);padding-bottom: 64%;}
     
@@ -1205,10 +1225,9 @@ body[data-info1="4"] .infogr1-left>div:nth-of-type(4){opacity: 1;-webkit-transfo
     .dog-item.active[data-id="1"] .img-main {transform: scale(0.89) translate(0px, 26.719vw);}
     .dog-item.active[data-id="2"] .img-main {transform: scale(1) translate(0px, 23.719vw);}
     .dog-item.active[data-id="2"]{margin-top: calc(((100vh - 105.6vw) / 2) + (105.6vw * 1) );margin-top: 106vw;}
-    .dog-item.active[data-id="3"]{margin-top: 211vw; }
+    .dog-item.active[data-id="3"]{margin-top: 211vw;}
     .dog-item.active[data-id="4"]{margin-top: 316.8vw;}
     .dog-item.active[data-id="5"]{margin-top: 422vw;}
-
     .dog-item[data-id="1"]{margin-top: calc(50vh - 52.734375vw);}
     .dog-item[data-id="2"]{margin-top: calc(50vh - 52.734375vw + 105.46vw * 1);}
     .dog-item[data-id="3"]{margin-top: calc(50vh - 52.734375vw + 105.46vw * 2);}
